Clean up and simplify m2e.lifecyclemapping and remove unused elements